assets/scss/layout/_form.scss
@use 'sass:map';
@use '../abstracts' as my;

/* FORMS
============================================================================ */

/**
 * Property compatibility table for form widgets
 * @see https://developer.mozilla.org/en-US/docs/Property_compatibility_table_for_form_widgets
 */

form {
  margin: 0 0 my.$gutter 0;
}

[role='group'],
fieldset {
  min-width: 0;
  max-width: none;
  padding: 0;
  margin: 0;
  margin-right: 0;
  margin-bottom: my.$gutter;
  margin-left: 0;

  border: 0;

  @media screen and (min-width: my.breakpoint('toggle-sidebar-position')) {
    margin-bottom: my.$gutter * 2;
  }

  + [role='group'],
  + fieldset {
    &:last-child {
      padding-top: 0;

      border: 0;
    }
  }
}

fieldset fieldset {
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 * 4. to override default firefox style
 */
fieldset > legend, /* 4 */
legend {
  box-sizing: border-box; /* 1 */
  display: table; /* 1 */

  flex-basis: 100%;

  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  margin-bottom: my.$gutter;

  font-weight: my.font-weight('extrabold');
  color: inherit; /* 2 */
  white-space: normal; /* 1 */
}

label {
  padding: 0;
  margin: 0;

  font-size: my.ms-step(0);
  font-weight: my.font-weight('bold');
  line-height: my.$gutter * 1;
  color: my.palette('text', 'faded');

  cursor: pointer;

  &:focus-within {
    color: my.palette('text', 'title');
  }

  [type='checkbox'] + &,
  [type='radio'] + & {
    font-weight: my.font-weight('text');
  }
}

.label--of-required {
  &::after {
    font-weight: my.font-weight('text');
    color: my.palette('signage', 'danger');

    content: ' *';
  }
}

// stylelint-disable-next-line selector-no-qualifying-type
abbr.field__required {
  color: my.palette('signage', 'danger');
  text-decoration: none;
}

label * {
  font-size: 1em;
}

label small {
  font-size: my.ms-step(-1);
  font-weight: my.font-weight('text');
  line-height: 1.5;
}

/* paragraphs inside forms
---------------------------------------------------------------------------- */

.flexible-fieldset {
  display: flex;

  flex-wrap: wrap;

  gap: my.$gutter;

  align-content: flex-start;
  align-items: stretch;
}

[data-field-size] {
  position: relative;

  display: flex;

  flex-basis: 100%;
  flex-grow: 1;
  flex-wrap: wrap;

  align-content: flex-start;

  // min-width: my.$max-width * 0.2; /* 256px */
  max-width: none;
  margin-bottom: 0;

  &:last-child {
    margin-bottom: 0;
  }

  $sizes: (
    (
      'percent': 10,
    ),
    (
      'percent': 15,
    ),
    (
      'percent': 20,
      'min-width': 10rem, /* 160px */
    ),
    (
      'percent': 25,
    ),
    (
      'percent': 30,
    ),
    (
      'percent': 33,
      'min-width': 12.5rem, /* 200px */
    ),
    (
      'percent': 35,
      'min-width': 12.5rem, /* 200px */
    ),
    (
      'percent': 40,
      'min-width': 12.5rem, /* 200px */
    ),
    (
      'percent': 45,
      'min-width': 12.5rem, /* 200px */
    ),
    (
      'percent': 50,
      'min-width': 12.5rem, /* 200px */
    ),
    (
      'percent': 55,
      'min-width': 12.5rem, /* 200px */
    ),
    (
      'percent': 60,
      'min-width': 15rem, /* 240px */
    ),
    (
      'percent': 65,
    ),
    (
      'percent': 70,
    ),
    (
      'percent': 75,
    ),
    (
      'percent': 80,
    ),
    (
      'percent': 85,
    ),
    (
      'percent': 90,
    ),
  );

  @each $size in $sizes {
    $percent: map.get($size, 'percent');
    $min-width: map.get($size, 'min-width');

    &[data-field-size='#{$percent}'] {
      flex-basis: calc(#{$percent * 1%} - #{my.$gutter});

      @if ($min-width) {
        min-width: $min-width;
      }
    }
  }
}

form p {
  margin-bottom: 0;

  font-size: my.ms-step(13px);
}

form br {
  clear: both;
}

/* common rules
 * @see https://github.com/jonathantneal/sanitize.css/issues/115#issue-178563944
---------------------------------------------------------------------------- */

/**
 * 1. Change the font styles in all browsers (opinionated).
 * 2. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
 * 3. Address inconsistent `text-transform` inheritance for `button` and `select`.
 * 4. Allow setting the same size for all form fields.
 */
%os-element-reset {
  & {
    box-sizing: border-box; /* 4 */
    display: inline-block;

    // stylelint-disable-next-line property-units
    padding: 1px; /* 2 */
    margin: 0;
    overflow: visible;

    font-family: inherit; /* 1 */
    font-size: my.ms-step(0); /* 1 */
    line-height: inherit; /* 1 */
    color: inherit;
    text-align: inherit;
    text-transform: inherit; /* 3 */
    letter-spacing: inherit;
    white-space: normal;
    vertical-align: top;

    background-clip: padding-box;
    border-style: solid;
    border-width: my.$stroke;
    border-radius: my.$rounded-corner;
    outline: 0;
    // stylelint-disable-next-line property-no-vendor-prefix
    -webkit-font-smoothing: inherit;

    outline-width: 0;
  }

  @include my.themed-color('border-color', ('border'));

  &:not(:disabled):hover {
    @include my.hovered;
  }

  &:focus-visible {
    @include my.focused;
  }

  @supports not selector(:focus-visible) {
    &:focus {
      @include my.focused;
    }
  }

  &:disabled {
    color: my.palette('disabled', 'foreground');

    cursor: not-allowed;

    background-color: my.palette('disabled', 'background');
  }

  &[aria-busy='true'] {
    cursor: wait;

    @include my.pulsing-outline(('loading', 'pulsing-list'));
  }

  + small {
    font-size: my.ms-step(-1);
  }
}

:enabled {
}

:optional {
}

/**
 * Correct the text style of placeholders
 */
@mixin placeholder {
  color: my.palette('placeholder');

  opacity: 1;
}

@mixin placeholder--focus {
  color: my.palette('placeholder', 'focus');
}

::placeholder {
  @include placeholder;
}

:focus::placeholder {
  @include placeholder--focus;
}

/* impossible inputs
============================================================================ */

[type='file'],
[type='color'],
[type='image'] {
  padding: 0;

  vertical-align: middle;

  cursor: pointer;

  border: 0;
}

/**
 * Consistent display mode in Firefox when image field is empty.
 */

[type='image'] {
  display: inline-block;
}

/**
 * Consistent background color on Chrome.
 */
[type='color'] {
  background-color: my.palette('white');
}

/**
 * Remove the inside button border in Chrome.
 */
::-webkit-color-swatch {
  border: 0;
}

/**
 * Remove the inside button border in Firefox.
 */
::-moz-color-swatch {
  border: 0;
}

/**
 * Remove the inside button padding in Chrome.
 */
::-webkit-color-swatch-wrapper {
  padding: 0;
}

/**
 * Remove the inside button padding in Firefox.
 */
::-moz-color-swatch-wrapper {
  padding: 0;
}

/**
 * 1. Consistent background color on Edge and IE.
 * 2. override Opera margin and padding
 */
[type='file'] {
  min-width: 250px;
  height: 2em;
  // stylelint-disable-next-line declaration-no-important
  padding: 0 !important; /* 2 */
  margin: 0; /* 2 */

  font-family: inherit;
  // stylelint-disable-next-line declaration-no-important
  text-align: start !important;
  white-space: nowrap;

  // stylelint-disable-next-line property-no-vendor-prefix
  -webkit-appearance: none;
  // stylelint-disable-next-line property-no-vendor-prefix
  -moz-appearance: none;
  appearance: normal;

  background-color: transparent; /* 1 */
  // stylelint-disable-next-line declaration-no-important
  border-style: none !important;

  // stylelint-disable-next-line property-no-vendor-prefix
  -webkit-box-align: baseline;

  -moz-binding: none;
}

// [type='file'][multiple] {
// }

[type='file'] > [type='text'] {
  height: inherit;

  font-size: inherit;
  color: inherit;
  letter-spacing: inherit;

  background-color: inherit;
  border-color: inherit;
}

[type='file'] > [type='button'] {
  box-sizing: content-box;

  height: inherit;
  padding: 0;

  font-size: inherit;
  white-space: normal;

  // stylelint-disable-next-line property-no-vendor-prefix
  -webkit-box-align: center;

  appearance: button;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Consistent background color for all browsers (same than above).
 * 3. Consistent style, width and color between all fields (same than above).
 * 4. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  font: inherit; /* 4 */

  // stylelint-disable-next-line property-no-vendor-prefix
  -webkit-appearance: button; /* 1 */
  cursor: pointer;

  border-style: solid; /* 3 */
  border-width: 1px; /* 3 */

  @include my.themed-color( 'background-color', ('button')); /* 2 */
  @include my.themed-color( 'border-color', ('border')); /* 3 */

  &:hover {
    @include my.themed-color( 'background-color', ('button', 'focus'));
  }
}

/**
 * Add a focus outline for color field (Chrome) and file selector field (Chrome & Safari) (same than above).
 */

:focus::-webkit-color-swatch,
:focus::-webkit-file-upload-button {
  outline: 1px dotted my.palette('black');
}

/**
 * Consistent style, width and color between all fields (same than above).
 */

::-ms-browse {
  border-style: solid; /* 1 */
  border-width: 1px; /* 1 */

  @include my.themed-color('border-color', ('border'));/* 1 */

  &:hover {
    @include my.themed-color('background-color', ('button', 'focus'));
  }
}

/**
 * Add a focus outline for file selector field in Edge and IE (same than above).
 */

:focus::-ms-browse {
  outline: 1px dotted my.palette('black');
}

// /* ALERTS and FORMS */
// .success {
// }

// :valid {
// }

// :in-range {
// }

// :required:valid {
// }

// .warning {
// }

[required],
:required {
  box-shadow: none;
}

// .alert {
// }

// :out-of-range {
// }

// [type='submit']:-moz-submit-invalid {
// }

// x-moz-errormessage {
// }

/**
 * Remove the focus outline in Firefox to only keep the original effect.
 */
[type='range']:-moz-focusring,
[type='checkbox']:-moz-focusring,
[type='radio']:-moz-focusring {
  outline-width: 0;
}

